--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-<!-- templates/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -68,6 +67,7 @@
                             <td>{{ file.size }}</td>
                             <td>{{ file.uploaded_at }}</td>
                             <td class="actions">
+                                <!-- Open modal for update -->
                                 <button class="btn btn-edit" data-id="{{ file.id }}" data-name="{{ file.name }}">
                                     <i class="fas fa-edit"></i>
                                 </button>
